# babushk.in

./: .gitignore  LICENSE  Makefile  README.md  Site.hs  about.md  babushkin.cabal  deploy.sh  diy-automated-papers.md  index.html  keybase.txt  research.md  site.hs  stack.yaml
css/: site.css  site.sass  syntax.css
files/: babushkin.pub.asc
posts/: adventures-physics-software-minuit.md  combining-xmonad-and-pass.md  diy-automated-papers.md  offlineimap-systemd.md  renew-environment-tmux.md  reproducible-git-annex.md  test.md
posts/secret/: how-to-organize-your-phd.md
templates/: archive.html  default.html  post-item.html  post.html
