name:                babushkin
version:             0.1.0.0
synopsis:            My personal website based on Hakyll
description:         Please see README.md
homepage:            https://github.com/ibab/babushk.in
license:             BSD3
license-file:        LICENSE
author:              Igor Babuschkin
maintainer:          igor@babushk.in
copyright:           Igor Babuschkin 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  hs-source-dirs:      ./
  main-is:             Site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hakyll==4.9.5.1, pandoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ibab/babushk.in
